Updated linked in link

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                 <img class="contactImg rounded mt-3 justify-content-center" src="assets/images/social-media.jpg">
                 <h3 class="text-center">Social Media</h3>
                 <div class="row justify-content-center">
-                    <p>LinkedIn: <a href="https://www.linkedin.com/in/phillip-jones-4122a7156/">Phillip Jones</a>
+                    <p>LinkedIn: <a href="www.linkedin.com/in/p-jones92/">Phillip Jones</a>
                     </p>
                 </div>
                 <div class="row justify-content-center">
