--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                     <h5>Click below to view my resume.</h5>
                 </div>
                 <div class="row justify-content-center">
-                    <a href="https://drive.google.com/open?id=1OcU2lPQRPNjgMRaJmjp_FfoZ9mA98kC5">Resume</a>
+                    <a href="https://docs.google.com/document/d/1w986VtOVbPJq7OfwunDdB7Phe3j6Xeg22XjMgksMvZw/edit?usp=sharing">Resume</a>
                 </div>
             </div>
             <div class="mx-2 mb-4 px-4 rounded" id="contactItem">
