Added github link

--- a/index.html
+++ b/index.html
@@ -46,9 +46,13 @@
                 <div class="col-12">
                     <div class="row justify-content-center">
                         <p class="summaryText">Full-Stack Web Developer utilizing a background in music
-                            education to provide a more well rounded addition to any team. Currently working on a certificate for Full Stack
-                            Web Development from the Vanderbilt University Coding Bootcamp. Known as a patient problem-solver passionate
-                            about a responsive user experience, and clear team communication. Motivated to utilize skills in the future as a part of a cohesive working unit developing quality websites and apps focused on user experience.</p>
+                            education to provide a more well rounded addition to any team. Currently working on a
+                            certificate for Full Stack
+                            Web Development from the Vanderbilt University Coding Bootcamp. Known as a patient
+                            problem-solver passionate
+                            about a responsive user experience, and clear team communication. Motivated to utilize
+                            skills in the future as a part of a cohesive working unit developing quality websites and
+                            apps focused on user experience.</p>
                     </div>
                 </div>
                 <div class="col-12">
@@ -79,7 +83,8 @@
         <h2 class="text-center mb-3">Portfolio</h2>
         <p class="portfolioText">Here are some of the projects I have worked on. On the front end, the projects
             utilize HTML, CSS, Bootstrap, JavaScript, JQuery, and REST APIs. On the back end, I have only used
-            Node.js and Express in some projects. I also use mySQL and noSQl databases to store information on some of these apps.</p>
+            Node.js and Express in some projects. I also use mySQL and noSQl databases to store information on some of
+            these apps.</p>
         <div class="js-flickity" data-flickity='{"wrapAround" : "true", "groupCells" : "true"}'>
             <div class="mx-2 mb-4 px-4 rounded" id="portfolioItem">
                 <img class="portfolioImg rounded mt-3 justify-content-center" src="assets/images/Got-Jobs.png">
@@ -182,7 +187,10 @@
                 <div class="modal-body">
                     <img class="modalImage col-12 rounded mt-3 justify-content-center" src="assets/images/Maze.png">
                     <h3 class="text-center">The Ender Maze</h3>
-                    <p class="portfolioText">The Ender Maze is a game developed using Handlebars.js and the ES6 class creation system to create characters and save them to a mySQL database. We used Sequelize as our ORM to hanle the connections to the database. For functionality and further development, we intend on switching the game over from Handlebars.js to React.js.</p>
+                    <p class="portfolioText">The Ender Maze is a game developed using Handlebars.js and the ES6 class
+                        creation system to create characters and save them to a mySQL database. We used Sequelize as our
+                        ORM to hanle the connections to the database. For functionality and further development, we
+                        intend on switching the game over from Handlebars.js to React.js.</p>
                     <div class="row justify-content-center">
                         <p>Deployed: <a href="https://arcane-plains-16309.herokuapp.com/">The Ender Maze</a></p>
                     </div>
@@ -350,13 +358,17 @@
         <div class="row justify-content-center">
             <div class="mx-2 mb-4 px-4 rounded" id="contactItem">
                 <img class="contactImg rounded mt-3 justify-content-center" src="assets/images/document.png">
-                <h3 class="text-center">Resume</h3>
+                <h3 class="text-center">Work</h3>
                 <div class="row justify-content-center">
-                    <h5>Click below to view my resume.</h5>
+                    <h5>Click below to view my work.</h5>
                 </div>
-                <div class="row justify-content-center">
+                <div class="row justify-content-center"><p>Resume: 
                     <a
-                        href="https://docs.google.com/document/d/1w986VtOVbPJq7OfwunDdB7Phe3j6Xeg22XjMgksMvZw/edit?usp=sharing">Resume</a>
+                        href="https://docs.google.com/document/d/1w986VtOVbPJq7OfwunDdB7Phe3j6Xeg22XjMgksMvZw/edit?usp=sharing">Resume</a></p>
+                </div>
+                <div class="row justify-content-center"><p>GitHub: 
+                    <a
+                        href="https://github.com/ptj92e">GitHub</a></p>
                 </div>
             </div>
             <div class="mx-2 mb-4 px-4 rounded" id="contactItem">
